--- a/config/dataset_folder/HCC-WCH.yaml
+++ b/config/dataset_folder/HCC-WCH.yaml
@@ -12,7 +12,7 @@ dataset:
   n_folds: 5
   fold: 0
   test_split_ratio: 0.15
-  split_save_dir: "temp/${dataset_folder.name}-${dataset_folder.dataset.n_folds}folds-seed${dataset_folder.dataset.seed}/split${dataset_folder.dataset.test_split_ratio}"
+  split_save_dir: "./exp/${dataset_folder.name}-${dataset_folder.dataset.n_folds}folds-seed${dataset_folder.dataset.seed}/split${dataset_folder.dataset.test_split_ratio}"
   group_by:
   split_cols: ['patient_id']
   shuffle: True
