--- a/config/model_folder/IRCL-WCH.yaml
+++ b/config/model_folder/IRCL-WCH.yaml
@@ -7,12 +7,12 @@ callbacks:  # inline definition of callbacks, don't change the name
     monitor: "val_loss"  # log in module/example_module.py
     save_top_k: 5
     mode: "min"
-    start_epoch: '${model_folder.stage_change_epoch}'
+    start_epoch: '${model_folder.extra.stage_change_epoch}'
     save_last: True
   CustomEarlyStopping:
     monitor: 'val_loss'
     patience: 8
-    start_epoch: '${model_folder.stage_change_epoch}'
+    start_epoch: '${model_folder.extra.stage_change_epoch}'
     mode: 'min'
     check_on_train_epoch_end: False
   TQDMProgressBar:
@@ -38,27 +38,32 @@ optimizer:
     - Adam
     - Adam
   optimizer_params:
-    - lr: 5e-5
+    - lr: [5e-5, 5e-5, 5e-5, 5e-5]
+      params: ['unet', 'pool', 'fc', 'mc']
+      model_id: [0, 0, 0, 0]
       betas: [0.9, 0.999]
-    - lr: 1e-5
+    - lr: [1e-5, 1e-5, 1e-5, 1e-5, 1e-5, 1e-5]
+      params: ['fc2', 'fc3', 'cls_token', 'position', 'transformer', 'cls_head']
+      model_id: [1, 1, 1, 1, 1, 1]
       betas: [0.9, 0.999]
 model:
   model:
     - 'Stage1Model'
     - 'Stage2Model'
   model_params:
-    - n_cluster: '${model_folder.num_biomarker}'
+    - n_cluster: '${model_folder.extra.num_biomarker}'
       img_size: '${dataset_folder.img_size}'
       perceptual_loss_ratio: 1
       #   momentum: 0.6
       #   temperature: 0.05
       neighbors: 9  # local neighbors
     - num_classes: '${num_classes}'
-      n_cluster: '${model_folder.num_biomarker}'
+      n_cluster: '${model_folder.extra.num_biomarker}'
       seq_len: '${dataset_folder.dataset.transform.ExtractSlicesD.k}'
       softmax_temp: 0.5
       dropout: 0.5  # 0.1
       attention_dropout: 0
-num_biomarker: 6
-stage_change_epoch: 80  # stage change epoch
-patient_level_sample_update_frequency: 7  # anchor update frequency
+extra:
+  num_biomarker: 6
+  stage_change_epoch: 80  # stage change epoch
+  patient_level_sample_update_frequency: 7  # anchor update frequency
