--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ scipy==1.13.1
 setuptools==75.8.0
 SimpleITK==2.4.1
 torch==2.6.0
+torchinfo==1.8.0
 torchmetrics==1.7.1
 torchvision==0.21.0
 psutil==7.0.0
