Enhance DISCOVER model configuration and training scripts; implement Pareto efficient loss and adjust batch sizes

--- a/config/model_folder/DISCOVER-STAGE2-WCH.yaml
+++ b/config/model_folder/DISCOVER-STAGE2-WCH.yaml
@@ -44,7 +44,8 @@ criterion:
     cov_k: 10
     cov_eps: 1e-4
     dropout: 0.5
-    loss_weights: [1, 1, 1, 1, 1, 1, 1, 1, 1]
+    low_bound: 0.05
+    ggt_eps: 1e-6
 optimizer:
   optimizer: Adam
   optimizer_params:
