--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,8 @@
 defaults:
   # hydra settings
   - hydra  # refer to `hydra.yaml`
-  - dataset_folder: HCC-WCH  # refer to `dataset/HCC-WCH.yaml`
-  - model_folder: IRCL-WCH  # refer to `model/IRCL-WCH.yaml`
+  - dataset_folder: skin-stage1  # refer to `dataset/skin.yaml`
+  - model_folder: MERGE-skin-stage1  # refer to `model/MERGE-skin.yaml`
   - _self_  # 占位符：表示当前文件，在defaults的最后一行声明，可以保证当前文件的配置可覆盖之前的配置
 
-num_classes: 2
+num_classes: 250
