--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,6 @@ torch==2.6.0
 torchmetrics==1.7.1
 torch-geometric==2.6.1
 torchvision==0.21.0
+transformers==4.57.1
 psutil==7.0.0
 tensorboard==2.19.0
